2007-06-16  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/tables-mysql.sql: Add to set character_set_database = utf8.

2007-06-16  Akira TAGOH  <at@gclab.org>

	* donrails/app/models/don_ping.rb (send_ping2, send_ping_xmlrpc)
	(send_ping_xmlrpc_extended): return a value explicitly. (Issue #53)

2007-06-14  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/admin/system/pick_donping_a.rhtml: New file.
	* donrails/app/views/admin/system/manage_don_ping.rhtml: Change to use this.

	* upgrade_1_7.postgresql.sql: add new column in don_pings table.
	* donrails/tool/tables-postgresql.sql: likewise.
	* donrails/tool/tables-mysql.sql: likewise.
	* upgrade_1_7.mysql.sql: likewise.
	* donrails/tool/pingger/pingger.rb (Pingger::async_send): Change for it.
	* donrails/app/models/don_ping.rb (DonPing::send_ping2a): Change for it.

	* donrails/tool/pingger/pingger.rb (Pingger::async_send): Change: Check response of ping servers. When response is false, ping time is not recorded.

	* donrails/app/models/don_ping.rb (DonPing::send_ping2a): Change: Check response of ping servers.

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::don_get_theme): Small fix.

2007-06-09  Akira TAGOH  <at@gclab.org>

	* donrails/tool/pingger/pingger.rb: Load environment.rb instead of
	loading active_recoard directly to make it comfortable for RoR
	installation from gem.

2007-06-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article.rb (Article::sendping): Fix for sending ping of hidden article.

2007-06-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::filesave): Typo fixed. It had caused failure for image upload by XMLRPC.

2007-06-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/admin/shared/add_banlist.rhtml: Change to hide help message (default). It can toggle hide/show.
